[gd_scene load_steps=14 format=3 uid="uid://dm7vpamo80mo6"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_ib3pp"]
[ext_resource type="Texture2D" uid="uid://dyyqigeusgdgq" path="res://Assets/ZZ-SelfMade/logo.png" id="2_mhy2g"]
[ext_resource type="Texture2D" uid="uid://df7odvvmwqok8" path="res://Assets/ZZ-SelfMade/Capture1.PNG" id="3_g60ot"]
[ext_resource type="FontFile" uid="uid://bqy1u2714a64q" path="res://Assets/FONT-bedstead/bedstead.otf" id="3_puktc"]
[ext_resource type="PackedScene" uid="uid://btwukfe50t1p0" path="res://GameParts/Items/potion_pot.tscn" id="4_rgrja"]
[ext_resource type="Texture2D" uid="uid://crsqxvgwejctu" path="res://Assets/HorseAssets/Horses_no_equipment/Horse_socks_black.png" id="6_2elrv"]
[ext_resource type="Texture2D" uid="uid://bl7y3lnmpvy12" path="res://Assets/HorseAssets/Horses_Rearing/Horse_socks_back_rearing.png" id="7_hjvxd"]
[ext_resource type="Texture2D" uid="uid://cw7lla6tta3ku" path="res://Assets/ERW - Grass Land 2.0 v1.7.1/Props/Animated props/shrine2-1getting buff-gray scaleSOUPONLY.png" id="8_o8l1r"]
[ext_resource type="Texture2D" uid="uid://bsfdgcyhe4kpm" path="res://Assets/ERW - Grass Land 2.0 v1.7.1/Props/Animated props/shrine2-STAND.png" id="9_67q7s"]
[ext_resource type="Texture2D" uid="uid://j3blew70tqqu" path="res://Assets/ERW - Grass Land 2.0 v1.7.1/Props/Animated props/shrine2-POT.png" id="10_eprpe"]

[sub_resource type="Animation" id="Animation_24wlw"]
resource_name = "GameStart"
length = 7.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HorseSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5, 5.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("6_2elrv"), ExtResource("7_hjvxd"), ExtResource("6_2elrv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HorseSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 7.3, 7.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66, 67, 68, 69, 70, 71, 71, 63, 64, 65, 66, 67, 68, 69, 70, 71, 71, 63, 64, 65, 66, 67, 68, 69, 70, 71, 71, 63, 64, 65, 66, 67, 68, 69, 70, 71, 71, 46, 55, 56, 55, 54, 13, 14, 15, 16, 5, 6, 7, 10, 36, 37, 38, 39, 40, 41, 36, 37, 39, 40, 41, 36, 37, 39, 40, 41, 36, 37, 38, 39, 40, 41]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HorseSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4, 4.6, 5.1, 5.3, 7.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(611, 181), Vector2(305, 173), Vector2(305, 173), Vector2(336, 173), Vector2(336, 173), Vector2(630, 181)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PotionPot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pot_Stand:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_67q7s")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pot_Stand:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pot_Pot:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_eprpe")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Pot_Pot:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Pot_Pot:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(4.3, 4.4, 4.5, 4.6, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.383972, -0.785398, -1.18682, -1.5708]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Pot_Pot:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(4.3, 4.5, 4.6, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(270, 184), Vector2(260, 193.5), Vector2(259, 196.5), Vector2(260, 196.5)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Pot_Pot:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(4.2, 4.3, 4.4, 4.5, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("soup:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(4.6, 4.7, 4.8, 5.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(259, 202), Vector2(249, 203), Vector2(246, 207), Vector2(246, 207)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("soup:texture")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(4.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_o8l1r")]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("soup:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(4.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("soup:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 4.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("soup:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(4.9, 5.1, 5.3, 5.5, 5.7, 5.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 1), Vector2(1.5, 1.5), Vector2(2, 1.5), Vector2(2, 2), Vector2(2.5, 2), Vector2(2.5, 2.5)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("HorseSprite:vframes")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 4.5, 5.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 4, 18]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("HorseSprite:hframes")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 4.5, 5.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 12, 9]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("soup:modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(4.6, 4.8, 5, 5.2, 5.4, 5.6, 5.8, 6, 6.2, 6.4, 6.6, 6.8, 7, 7.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0.483333, 0, 1), Color(1, 0.866667, 0, 1), Color(0.2, 1, 0, 1), Color(0, 1, 0.95, 1), Color(0, 0.416667, 1, 1), Color(0.17, 0.17, 1, 1), Color(0.484, 0.28, 1, 1), Color(0.86, 0.44, 1, 1), Color(1, 0.64, 0.94, 1), Color(1, 0.69, 0.69, 1), Color(1, 1, 0.69, 1), Color(0.823333, 1, 0.8, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jtryo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HorseSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_2elrv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HorseSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [63]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HorseSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(611, 181)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PotionPot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pot_Stand:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_67q7s")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pot_Stand:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pot_Pot:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_eprpe")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Pot_Pot:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Pot_Pot:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Pot_Pot:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(260, 193.5)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Pot_Pot:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("soup:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(259, 202)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("soup:texture")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_o8l1r")]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("soup:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("soup:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("soup:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("HorseSprite:vframes")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("HorseSprite:hframes")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("soup:modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yalf7"]
_data = {
"GameStart": SubResource("Animation_24wlw"),
"RESET": SubResource("Animation_jtryo")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -5.0
offset_right = -26.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ib3pp")

[node name="BG" type="TextureRect" parent="."]
z_index = -5
layout_mode = 0
offset_left = -108.0
offset_top = -21.0
offset_right = 833.0
offset_bottom = 538.0
texture = ExtResource("3_g60ot")

[node name="Logo" type="TextureRect" parent="."]
modulate = Color(0.698282, 0.543094, 0.902737, 1)
layout_mode = 0
offset_left = 106.0
offset_top = 40.0
offset_right = 447.0
offset_bottom = 122.0
texture = ExtResource("2_mhy2g")

[node name="Logo2" type="TextureRect" parent="."]
modulate = Color(0.180392, 0.180392, 0.180392, 0.415686)
z_index = -1
layout_mode = 0
offset_left = 103.0
offset_top = 45.0
offset_right = 445.0
offset_bottom = 126.0
texture = ExtResource("2_mhy2g")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 230.0
offset_top = 263.0
offset_right = 310.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0106611, 0.144042, 0.0543578, 1)
theme_override_colors/font_hover_color = Color(0.0669178, 0.395289, 0.190521, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0.462745, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_puktc")
theme_override_font_sizes/font_size = 30
text = "Play"
flat = true

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = 300.0
offset_right = 298.0
offset_bottom = 329.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0117647, 0.145098, 0.054902, 1)
theme_override_colors/font_hover_color = Color(0.0666667, 0.396078, 0.192157, 1)
theme_override_fonts/font = ExtResource("3_puktc")
theme_override_font_sizes/font_size = 20
text = "Exit
"
flat = true

[node name="PotionPot" parent="." instance=ExtResource("4_rgrja")]
position = Vector2(270, 184)
metadata/_edit_lock_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PotionPot"]
remote_path = NodePath("../../Camera2D")

[node name="HorseSprite" type="Sprite2D" parent="."]
position = Vector2(611, 181)
texture = ExtResource("6_2elrv")
hframes = 9
vframes = 18
frame = 63

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yalf7")
}

[node name="Pot_Stand" type="Sprite2D" parent="."]
visible = false
position = Vector2(268, 190.5)
texture = ExtResource("9_67q7s")

[node name="soup" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
position = Vector2(259, 202)
rotation = 3.14159
scale = Vector2(1.5, 1)
texture = ExtResource("8_o8l1r")
hframes = 7
frame = 1

[node name="Pot_Pot" type="Sprite2D" parent="."]
visible = false
position = Vector2(260, 193.5)
texture = ExtResource("10_eprpe")
hframes = 7
frame = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(270, 184)

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
